--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 <main style="padding:20px;">
   <h1>Welcome to CyberTech</h1>
   <p>Where code meets innovation.</p>
+         <P>This website is still under development by Dcyberx</P>
 </main>
 
 <script>
@@ -283,4 +284,5 @@
 </script>
 
 </body>
+
 </html>
