--- a/index.html
+++ b/index.html
@@ -251,12 +251,17 @@
 <main style="padding:20px;">
   <h1>Welcome to CyberTech</h1>
   <p>Where code meets innovation.</p>
-  <p>
-    <p>
-      <p>
+  <br><br><br>
         
-              <P>This website is still under development by Dcyberx</P>
+              <P> 🚧 This website is still under development by Dcyberx. Interaction is okay. </P>
+              <p>⚠️ payments and subsription are still under arrangement, donot be scammed by anyone.<p>
+<br><br>
 </main>
+
+<div class="image-container">
+  <img src="nexus.png" alt="Dcyberx Nexus Program" width="200" height="200">
+</div>
+
 
 <script>
   function toggleTheme() {
