--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
 
 <div class="image-container">
   <img src="nexus.png" alt="Dcyberx Nexus Program" width="300" height="300">
-</div>
+</div><a href="nexus.html">Dcyberx Nexus program</a>
+
 
 
 <script>
