--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
   vertical-align: middle; /* aligns with text/buttons */
 }
 
+.nexus {
+    .add-padding {
+  padding-top: 9px;    /* Adds space inside the image at the top */
+  padding-right: 5px;  /* Adds space inside the image to the right */
+  padding-bottom: 4px; /* Adds space inside the image at the bottom */
+  padding-left: 5px;   /* Adds space inside the image to the left */
+}
+
+
   }
 
   nav {
@@ -259,8 +268,8 @@
 </main>
 
   <div class="image-container">
-  <img src="nexus.png" alt="Dcyberx Nexus Program" width="300" height="300">
-  </div><a href="nexus.html">Dcyberx Nexus program</a>
+  <img src="nexus.png" alt="Dcyberx Nexus Program" width="300" height="300" class="add-padding">
+  
 
 
 
