--- a/index.html
+++ b/index.html
@@ -261,18 +261,22 @@
 <br>
 </main>
 
-  <div class="image-container">
-  <img src="nexus.png" alt="Dcyberx Nexus Program" width="300" height="300" class="add-padding">
+<div class="image-container">
+  <img src="nexus.png" alt="Dcyberx Nexus Program" width="300" height="300">
+</div>
 
-.nexus .add-padding {
-  padding-top: 9px;    /* Adds space inside the image at the top */
-  padding-right: 5px;  /* Adds space inside the image to the right */
-  padding-bottom: 4px; /* Adds space inside the image at the bottom */
-  padding-left: 5px;   /* Adds space inside the image to the left */
-}
+<style>
+  .image-container {
+    padding-top: 9px;    /* Space inside the container at the top */
+    padding-right: 5px;  /* Space inside the container to the right */
+    padding-bottom: 4px; /* Space inside the container at the bottom */
+    padding-left: 5px;   /* Space inside the container to the left */
+  }
 
-
-
+  .image-container img {
+    padding: 10px;  /* Space around the image itself */
+  }
+</style>
 
 <script>
   function toggleTheme() {
