--- a/index.html
+++ b/index.html
@@ -262,10 +262,9 @@
 </main>
 
 <div class="image-container">
-  <img src="image1.png" alt="Image 1" style="width: 165px; height: 155px;">
-  <img src="image2.png" alt="Image 2" style="width: 165px; height: 155px;">
-  <img src="image1.png" alt="Zoomable Image" class="zoom-out">
-  <img src="image2.png" alt="Zoomable Image" class="zoom-out">
+  <img src="image1.png" alt="Image 1 Zoomable Image" class="zoom-image" style="width: 165px; height: 155px;">
+  <img src="image2.png" alt="Image 2 Zoomable Image" class="zoom-image" style="width: 165px; height: 155px;">
+
 
 </div>
 
@@ -290,13 +289,12 @@
     border-color: rgba(0, 0, 0, 0.3); /* Faded border color on hover */
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Slightly stronger shadow on hover */
   }
-
-  .zoom-out {
-  transition: transform 0.3s ease;  /* Smooth transition for zooming */
+  .zoom-image {
+  transition: transform 0.3s ease; /* Smooth zoom transition */
 }
 
-.zoom-out:hover {
-  transform: scale(0.8);  /* Scales the image to 80% of its size */
+.zoom-image:hover {
+  transform: scale(0.8);  /* Zooms out the image to 80% of its size */
 }
 
 </style>
