--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 </main>
 
 <div class="image-container">
-  <img src="image1.png" alt="Image 1 Zoomable Image" class="zoom-image" style="width: 165px; height: 155px;">
-  <img src="image2.png" alt="Image 2 Zoomable Image" class="zoom-image" style="width: 165px; height: 155px;">
+  <img src="image1.png" alt="Image 1 Zoomable Image" id="zoomImage" class="zoom-image" style="width: 165px; height: 155px;">
+  <img src="image2.png" alt="Image 2 Zoomable Image" id="zoomImage" class="zoom-image" style="width: 165px; height: 155px;">
 
 
 </div>
