--- a/index.html
+++ b/index.html
@@ -262,40 +262,41 @@
 </main>
 
 <div class="image-container">
-  <img src="image1.png" alt="Image 1 Zoomable Image" id="zoomImage" class="zoom-image" style="width: 165px; height: 155px;">
-  <img src="image2.png" alt="Image 2 Zoomable Image" id="zoomImage" class="zoom-image" style="width: 165px; height: 155px;">
-
-
+  <img src="image1.png" alt="Image 1 Zoomable Image" class="zoom-image" style="width: 165px; height: 155px;">
+  <img src="image2.png" alt="Image 2 Zoomable Image" class="zoom-image" style="width: 165px; height: 155px;">
 </div>
 
+
 <style>
-  .image-container {
-    padding-top: 3px;    /* Space inside the container at the top */
-    padding-right: 5px;  /* Space inside the container to the right */
-    padding-bottom: 4px; /* Space inside the container at the bottom */
-    padding-left: 5px;   /* Space inside the container to the left */
-    display: flex;       /* To align images horizontally */
-  }
+.image-container {
+  padding-top: 3px;
+  padding-right: 5px;
+  padding-bottom: 4px;
+  padding-left: 5px;
+  display: flex;       /* Align images horizontally */
+}
 
-  .image-container img {
-    margin: 0 5px; /* Space between images */
-    border: 5px solid transparent; /* Transparent border to allow fading effect */
-    border-radius: 8px; /* Optional: rounded corners */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow to mimic fading effect */
-    transition: border-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
-  }
+.image-container img {
+  margin: 0 5px;
+  border: 5px solid transparent;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
 
-  .image-container img:hover {
-    border-color: rgba(0, 0, 0, 0.3); /* Faded border color on hover */
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Slightly stronger shadow on hover */
-  }
-  .zoom-image {
+.image-container img:hover {
+  border-color: rgba(0, 0, 0, 0.3); /* Faded border color on hover */
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Stronger shadow on hover */
+}
+
+.zoom-image {
   transition: transform 0.3s ease; /* Smooth zoom transition */
 }
 
 .zoom-image:hover {
-  transform: scale(0.8);  /* Zooms out the image to 80% of its size */
+  transform: scale(0.8);  /* Zoom out the image to 80% of its original size */
 }
+
 
 </style>
 
