--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     .image-container img:active {
       border-color: rgba(0, 0, 0, 0.3);
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-      transform: scale(0.65); /* Zoom out to 65% */
+      transform: scale(1.65); /* Zoom in to 65% bigger */
     }
   </style>
 </head>
