--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="dropdown">
       <div class="dropdown-btn">Programs</div>
       <div class="dropdown-content">
-        <a href="image1.png">Dcyberx Nexus Academy</a>
+        <a href="index.html/image1.png">Dcyberx Nexus Academy</a>
         <a href="#">Gumroad products</a>
       </div>
     </div>
