--- a/playlist.html
+++ b/playlist.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dcyberx Player</title>
-  <div id="site-header"></div>
+
   <style>
     body {
       background: #000;
       color: #0f0;
       font-family: monospace;
+      display: flex;
+      justify-content: center; /* Horizontal centering */
+      align-items: center; /* Vertical centering */
+      height: 100vh; /* Full viewport height */
+      margin: 0;
       text-align: center;
-      padding-top: 100px; /* space so header doesn't overlap */
+
     }
 
     h2 { color: #00ff00; }
@@ -57,39 +62,31 @@
       50% { height: 35px; }
     }
 
- 
   </style>
-
-<script>
-  fetch("header.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("site-header").innerHTML = html;
-    });
-</script>
-
-
+  
 </head>
 <body>
 
 
 
   <!-- 🔹 PLAYER CONTENT -->
-  <h2>Dcyberx Player</h2>
-  <audio id="music-player" controls></audio><br>
+  <div>
+    <h2>Dcyberx Player</h2>
+    <audio id="music-player" controls></audio><br>
 
-  <button onclick="prevSong()">⏮ Prev</button>
-  <button onclick="playAudio()">▶ Play</button>
-  <button onclick="pauseAudio()">⏸ Pause</button>
-  <button onclick="nextSong()">⏭ Next</button>
-  <button onclick="shuffleSong()">🔀 Shuffle</button>
-  <button onclick="downloadSong()">📥 Download</button>
+    <button onclick="prevSong()">⏮ Prev</button>
+    <button onclick="playAudio()">▶ Play</button>
+    <button onclick="pauseAudio()">⏸ Pause</button>
+    <button onclick="nextSong()">⏭ Next</button>
+    <button onclick="shuffleSong()">🔀 Shuffle</button>
+    <button onclick="downloadSong()">📥 Download</button>
 
-  <div id="now-playing">Now Playing: None</div>
+    <div id="now-playing">Now Playing: None</div>
 
-  <!-- Sound wave animation -->
-  <div class="wave-container">
-    <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
+    <!-- Sound wave animation -->
+    <div class="wave-container">
+      <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
+    </div>
   </div>
 
   <!-- 🔹 Scripts -->
@@ -133,6 +130,16 @@
       link.click();
     }
   </script>
+  <div id="site-header"></div>
+<script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("site-header").innerHTML = html;
+    });
+</script>
+
+
 
 </body>
 </html>
