--- a/recaptcha.html
+++ b/recaptcha.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
   <title>CyberTech Subscription Puzzle</title>
   <style>
     body { background:#0d0d0d; color:#00ff99; font-family:monospace; padding:20px; }
