--- a/index.html
+++ b/index.html
@@ -435,3 +435,95 @@
 
 </html>
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-XSS-Protection" content="1; mode=block"> <!-- Enable XSS Protection -->
+  <meta http-equiv="X-Content-Type-Options" content="nosniff"> <!-- Prevent MIME type sniffing -->
+  <meta http-equiv="X-Frame-Options" content="DENY"> <!-- Prevent clickjacking -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; object-src 'none';">
+  <title>Secure Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #2e3a59;
+    }
+
+    textarea {
+      width: 100%;
+      height: 100px;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+    }
+
+    button {
+      padding: 10px 15px;
+      background-color: #5cb85c;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #4cae4c;
+    }
+
+    #comments {
+      margin-top: 20px;
+    }
+
+    .comment {
+      background-color: #fff;
+      padding: 15px;
+      border-radius: 5px;
+      margin-bottom: 10px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
+  </style>
+</head>
+<body>
+
+
+
+  <script>
+    // Function to sanitize and escape user input
+    function sanitizeInput(input) {
+      const element = document.createElement('div');
+      element.textContent = input; // Escape input by converting it into text content
+      return element.innerHTML; // Returns the HTML-escaped string
+    }
+
+    // Function to add the comment to the page
+    document.getElementById("commentForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      const commentText = document.getElementById("comment").value;
+      
+      // Sanitize the user input to prevent XSS
+      const sanitizedComment = sanitizeInput(commentText);
+
+      // Create a new div to hold the sanitized comment
+      const commentDiv = document.createElement("div");
+      commentDiv.classList.add("comment");
+      commentDiv.innerHTML = sanitizedComment; // Safely insert sanitized content
+      
+      // Append the sanitized comment to the comments section
+      document.getElementById("comments").appendChild(commentDiv);
+
+      // Clear the textarea after submission
+      document.getElementById("comment").value = '';
+    });
+  </script>
+</body>
+</html>
