--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       background-color: #fff;
       border: none;
       font-size: 18px;
-      color: #333;
+      color: #f4f4f4;
       padding: 5px 10px;
       cursor: pointer;
       border-radius: 5px;
@@ -449,8 +449,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: #121212;
+      color: #f4f4f4;
       margin: 0;
       padding: 20px;
     }
