--- a/playlist.html
+++ b/playlist.html
@@ -166,8 +166,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: #121212;
+      color: #f4f4f4;
       margin: 0;
       padding: 20px;
     }
