--- a/aboutsite.html
+++ b/aboutsite.html
@@ -103,7 +103,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #121212;
-      color: #f4f4f4;
+      color: #79e0ab;
       margin: 0;
       padding: 20px;
     }
