--- a/aboutme.html
+++ b/aboutme.html
@@ -97,7 +97,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #121212;
-      color: #f4f4f4;
+      color: #79e0ab;
       margin: 0;
       padding: 20px;
     }
