--- a/header.html
+++ b/header.html
@@ -306,7 +306,7 @@ document.addEventListener('click', (e) => {
     body {
       font-family: Arial, sans-serif;
       background-color: #121212;
-      color: #f4f4f4;
+      color: #79e0ab;
       margin: 0;
       padding: 20px;
     }
