--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       background-color: #fff;
       border: none;
       font-size: 18px;
-      color: #f4f4f4;
+      color: #79e0ab;
       padding: 5px 10px;
       cursor: pointer;
       border-radius: 5px;
@@ -450,7 +450,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #121212;
-      color: #f4f4f4;
+      color: #79e0ab;
       margin: 0;
       padding: 20px;
     }
