--- a/nexus.html
+++ b/nexus.html
@@ -63,7 +63,7 @@
       background-color: #fff;
       border: none;
       font-size: 18px;
-      color: #f4f4f4;
+      color: #79e0ab;
       padding: 5px 10px;
       cursor: pointer;
       border-radius: 5px;
@@ -139,7 +139,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #121212;
-      color: #f4f4f4;
+      color: #79e0ab;
       margin: 0;
       padding: 20px;
     }
