--- a/header.html
+++ b/header.html
@@ -407,13 +407,13 @@ document.addEventListener('click', (e) => {
     body {
       font-family: Arial, sans-serif;
       background-color: #121212; /* Dark background */
-      color: #f4f4f4; /* Light text color */
+      color: #8ad4ba; /* Light text color */
       margin: 0;
       padding: 20px;
     }
 
     h1 {
-      color: #f4f4f4;
+      color: #8ad4ba;
     }
 
     textarea {
@@ -423,7 +423,7 @@ document.addEventListener('click', (e) => {
       margin-bottom: 10px;
       border-radius: 5px;
       background-color: #333;
-      color: #f4f4f4;
+      color: #8ad4ba;
       border: 1px solid #555;
     }
 
