--- a/recaptcha.html
+++ b/recaptcha.html
@@ -231,13 +231,13 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #121212; /* Dark background */
-      color: #f4f4f4; /* Light text color */
+      color: #8ad4ba; /* Light text color */
       margin: 0;
       padding: 20px;
     }
 
     h1 {
-      color: #f4f4f4;
+      color: #8ad4ba;
     }
 
     textarea {
@@ -247,7 +247,7 @@
       margin-bottom: 10px;
       border-radius: 5px;
       background-color: #333;
-      color: #f4f4f4;
+      color: #8ad4ba;
       border: 1px solid #555;
     }
 
