--- a/aboutsite.html
+++ b/aboutsite.html
@@ -9,7 +9,7 @@
   <style>
     body {
       background: #000;
-      color: #0f0;
+      color: #00ff99;
       font-family: monospace;
       margin: 0;
       padding: 0;
@@ -27,7 +27,7 @@
     }
     .logo { font-weight: 700; font-size: 20px; color: #39ff14; }
     nav { display: flex; gap: 15px; }
-    nav a { text-decoration: none; color: #0f0; font-weight: 500; }
+    nav a { text-decoration: none; color: #00ff99; font-weight: 500; }
     nav a:hover { text-decoration: underline; }
 
     .container {
@@ -40,7 +40,7 @@
     p {
       line-height: 1.6;
       font-size: 16px;
-      color: #0f0;
+      color: #00ff99;
     }
     .highlight {
       color: #39ff14;
@@ -292,3 +292,4 @@
   </script>
 </body>
 </html>
+
